--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -63,9 +63,6 @@ WORKDIR $HOME
 # Copy ressources from context into bsb home
 COPY . .
 
-# Back to root
-USER root
-
 # Make start script executable
 RUN chmod ug+x start.sh
 RUN chmod ug+x start_django.sh
@@ -74,9 +71,12 @@ RUN chmod ug+x start_django.sh
 RUN pip install -r requirements.txt
 
 # Configure Nginx
-RUN rm /etc/nginx/sites-enabled/default
-RUN ln -s /bsb/nexus_server/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
+RUN sudo rm /etc/nginx/sites-enabled/default
+RUN sudo ln -s nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 RUN systemctl enable nginx
+
+# Back to root
+USER root
 
 # Copy entrypoint
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
