--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -63,20 +63,20 @@ WORKDIR $HOME
 # Copy ressources from context into bsb home
 COPY . .
 
+# Back to root
+USER root
+
 # Make start script executable
-RUN sudo chmod ug+x start.sh
-RUN sudo chmod ug+x start_django.sh
+RUN chmod ug+x start.sh
+RUN chmod ug+x start_django.sh
 
 # Install required python packages
 RUN pip install -r requirements.txt
 
 # Configure Nginx
-RUN sudo rm /etc/nginx/sites-enabled/default
-RUN sudo ln -s nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
+RUN rm /etc/nginx/sites-enabled/default
+RUN ln -s nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 RUN systemctl enable nginx
-
-# Back to root
-USER root
 
 # Copy entrypoint
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
