Django Production Build

--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -67,8 +67,8 @@ COPY . .
 USER root
 
 # Make start script executable
-RUN chmod ug+x start.sh
-RUN chmod ug+x start_django.sh
+RUN chmod ugo+x start.sh
+RUN chmod ugo+x start_django.sh
 
 # Install required python packages
 RUN pip install -r requirements.txt
