Django Production Build

--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -58,6 +58,7 @@ RUN echo "bsb ALL=(root) NOPASSWD:ALL" > /etc/sudoers.d/bsb && \
 # Switch to user bsb
 USER bsb
 ENV HOME /home/bsb
+ENV PATH="$HOME/.local/bin:$PATH"
 WORKDIR $HOME
 
 # Copy ressources from context into bsb home
