--- a/.env
+++ b/.env
@@ -58,18 +58,18 @@
 # My personal default development configuration
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
-#NEXUS_COMPOSE_HOME=~/nexus_cockpit
-#NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
-#NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
-#NEXUS_CONTAINER=nexus-cockpit
-#NEXUS_CONTAINER_ALIAS=nexus-cockpit
-#NEXUS_NETWORK=nexus-cockpit_net
-#NEXUS_PORT_RNSAPI=4255
-#NEXUS_PORT_WEB=127.0.0.1:4285
-#NEXUS_PORT_JSONAPI=127.0.0.1:4345
-#NEXUS_ASPECT=cockpit
-#NEXUS_LONGPOLL=60
-#NEXUS_TIMEOUT=70
-#NEXUS_ROLE={"cluster":"cockpit"}
-#NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-#NEXUS_COMMAND=/bsb/start_django.sh
+NEXUS_COMPOSE_HOME=~/nexus_cockpit
+NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
+NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+NEXUS_CONTAINER=nexus-cockpit
+NEXUS_CONTAINER_ALIAS=nexus-cockpit
+NEXUS_NETWORK=nexus-cockpit_net
+NEXUS_PORT_RNSAPI=4255
+NEXUS_PORT_WEB=127.0.0.1:4285
+NEXUS_PORT_JSONAPI=127.0.0.1:4345
+NEXUS_ASPECT=cockpit
+NEXUS_LONGPOLL=60
+NEXUS_TIMEOUT=70
+NEXUS_ROLE={"cluster":"cockpit"}
+NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
+NEXUS_COMMAND=./start.sh
