Django Production Build

--- a/.env
+++ b/.env
@@ -72,4 +72,4 @@ NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
 NEXUS_ROLE={"cluster":"cockpit"}
 NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-NEXUS_COMMAND=./start.sh
+NEXUS_COMMAND=./start_django.sh
