Django Production Build

--- a/bsbdock.nexus_context/nexus.nginx.conf
+++ b/bsbdock.nexus_context/nexus.nginx.conf
@@ -3,7 +3,7 @@
 server {
 	listen 4280 default_server;
 	listen [::]:4280 default_server;
-	root /bsb/nexus_web;
+	root /home/bsb/nexus_web;
 	index index.html;
 	server_name _;
 	location / {
