--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@
 #NEXUS_PORT_JSONAPI=127.0.0.1:4281
 #NEXUS_PORT_JSONAPI=4281
 #NEXUS_RNODE_DEVICE=/dev/tty0
-#NEXUS_COMMAND=start.sh
+#NEXUS_COMMAND=./start.sh
 
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
