--- a/bsbdock.nexus_context/nexus.nginx.conf
+++ b/bsbdock.nexus_context/nexus.nginx.conf
@@ -6,7 +6,20 @@ server {
 	root /home/bsb/nexus_web;
 	index index.html;
 	server_name _;
+
 	location / {
 		try_files $uri $uri/ =404;
 	}
+
+    location /static/ {
+        alias /home/app/web/staticfiles/;
+    }
+
+	location /admin/ {
+        proxy_pass http://localhost:4281;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+	}
+
 }
