Django Production Build

--- a/bsbdock.nexus_context/nexus.nginx.conf
+++ b/bsbdock.nexus_context/nexus.nginx.conf
@@ -1,4 +1,5 @@
 # Virtual Host configuration for Nexus Web Client inside the container listening on port 4280 (http)
+# Django related URI are redirected to the static fiels folder or the gunicorn serving the django App.
 
 server {
 	listen 4280 default_server;
