--- a/bsbdock.nexus_context/nexus.nginx.conf
+++ b/bsbdock.nexus_context/nexus.nginx.conf
@@ -16,7 +16,7 @@ server {
         alias /home/bsb/nexus_django/static/;
     }
 
-    location ~ ^/(admin|polls)/ {
+    location ~ ^/(admin|server|polls)/ {
         proxy_pass http://localhost:4281;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
