Django Server RNS Test - Intial Server App with Distribution and Bridge Traget Model

--- a/.env
+++ b/.env
@@ -48,6 +48,11 @@
 #HINT: No white space characters are allowed within json strings used as parameters for nexus server
 #NEXUS_ROLE={"cluster":"home"}
 
+# Default Django SuperUser settings
+DJANGO_SUPERUSER_USERNAME=admin
+DJANGO_SUPERUSER_PASSWORD=admin
+DJANGO_SUPERUSER_EMAIL=admin@example.com
+
 # My personal non default development configuration
 # This section can be safely removed
 #NEXUS_RNODE_DEVICE=/dev/ttyACM0
