--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -65,6 +65,7 @@ COPY . .
 # Create folder for static files
 WORKDIR $HOME/nexus_django
 RUN mkdir static
+RUN chmod ugo+x manage.py
 
 # Set ownership to usr bsb
 RUN chown -R bsb:bsb $HOME
