Django Server RNS Test - Intial Server App with Distribution and Bridge Traget Model

--- a/.env
+++ b/.env
@@ -49,9 +49,9 @@
 #NEXUS_ROLE={"cluster":"home"}
 
 # Default Django SuperUser settings
-DJANGO_SUPERUSER_USERNAME=admin
-DJANGO_SUPERUSER_PASSWORD=admin
-DJANGO_SUPERUSER_EMAIL=admin@example.com
+#DJANGO_SUPERUSER_USERNAME=admin
+#DJANGO_SUPERUSER_PASSWORD=admin
+#DJANGO_SUPERUSER_EMAIL=admin@example.com
 
 # My personal non default development configuration
 # This section can be safely removed
