Django Server RNS Test - Intial Server App with Distribution and Bridge Traget Model

--- a/.env
+++ b/.env
@@ -52,6 +52,7 @@
 #DJANGO_SUPERUSER_USERNAME=admin
 #DJANGO_SUPERUSER_PASSWORD=admin
 #DJANGO_SUPERUSER_EMAIL=admin@example.com
+#DJANGO_LOG_LEVEL=debug
 
 # My personal non default development configuration
 # This section can be safely removed
