Django Server RNS Test - Intial Server App with Distribution and Bridge Traget Model

--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -24,6 +24,9 @@ ENV PYTHONUNBUFFERED 1
 RUN apt-get -y update && apt-get -y upgrade
 RUN apt-get -y install tzdata sudo
 
+# Install pip3
+RUN apt -y install python3-pip
+
 # Install personal helper tools
 RUN apt -y install mc nano vim screen
 
@@ -70,9 +73,8 @@ RUN chown -R bsb:bsb $HOME
 USER bsb
 WORKDIR $HOME
 
-# Install pip3
-RUN sudo apt -y install python3-pip
-RUN sudo pip install --upgrade pip
+# Upgrade pip
+RUN pip install --upgrade pip
 
 # Install required python packages
 #RUN pip install --no-cache-dir -r ./requirements.txt
