Django Server RNS Test - Intial Server App with Distribution and Bridge Traget Model

--- a/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexusdev_linux-amd64
@@ -32,7 +32,7 @@ RUN apt-get -y install mc nano vim screen
 
 # Install components for django production deplyment
 #RUN apt-get -y install systemctl uwsgi uwsgi-plugin-python3 nginx
-RUN apt-get -y install systemctl nginx
+RUN apt-get -y install nginx systemctl
 
 # Install TNC for radio networking (direwolf)
 RUN apt-get -y install direwolf
