--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -28,9 +28,9 @@ RUN apt-get -y install tzdata sudo
 RUN apt-get -y install python3-pip
 
 # Build essentials for rust
-RUN apt -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
+RUN apt-get -y install build-essential libssl-dev libffi-dev python-dev-is-python3 python2-dev python2
 # Install rust
-RUN apt -y install curl
+RUN apt-get -y install curl
 RUN curl https://sh.rustup.rs -sSf -y1 | sh  -s -- -y --profile minimal --default-toolchain nightly
 ENV PATH="/root/.cargo/bin:$PATH"
 
