Django Server RNS Test - Intial Server App with Distribution and Bridge Traget Model

--- a/.env
+++ b/.env
@@ -65,8 +65,8 @@
 # This section can be safely removed
 # Configuration for Cockpit Dev Environment
 NEXUS_COMPOSE_HOME=~/nexus_cockpit
-NEXUS_DOCKERFILE=./Dockerfile_nexusdev_linux-amd64
-NEXUS_IMAGE=bsbdock/nexus:dev_linux-amd64
+NEXUS_DOCKERFILE=./Dockerfile_nexus_dev_linux-amd64
+NEXUS_IMAGE=bsbdock/nexus:dev
 NEXUS_CONTAINER=nexus-cockpit
 NEXUS_CONTAINER_ALIAS=nexus-cockpit
 NEXUS_NETWORK=nexus-cockpit_net
