--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -75,7 +75,7 @@ RUN ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 RUN chmod +x entrypoint.sh
 RUN chmod +x start.sh
 RUN chmod +x start_django.sh
-RUN chmod +x $HOME/nexus_django/manage.py
+# RUN chmod +x $HOME/nexus_django/manage.py
 
 # Move script to bin
 RUN mv entrypoint.sh /usr/local/bin
