--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -102,8 +102,8 @@ RUN pip install -r ./requirements.txt
 # Collect static files
 WORKDIR $HOME/nexus_django
 #RUN python manage.py collectstatic --no-input --clear
-RUN ./manage.py collectstatic --no-input --clear
-RUN ./manage.py flush --no-input
+# RUN ./manage.py collectstatic --no-input --clear
+# RUN ./manage.py flush --no-input
 
 # Expose port for Reticulum server TCP Interface (disable as default)
 ENV NEXUS_CONTAINER_RNS_PORT 4242
