--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -80,32 +80,32 @@ COPY . .
 RUN pip install -r ./requirements.txt
 
 # Make some scripts executable
-RUN chmod +x entrypoint.sh
-RUN chmod +x start.sh
-RUN chmod +x start_django.sh
+#RUN chmod +x entrypoint.sh
+#RUN chmod +x start.sh
+#RUN chmod +x start_django.sh
 # RUN chmod +x $HOME/nexus_django/manage.py
 
 # Move script to bin
-RUN mv entrypoint.sh /usr/local/bin
-RUN mv start.sh /usr/local/bin
-RUN mv start_django.sh /usr/local/bin
+#RUN mv entrypoint.sh /usr/local/bin
+#RUN mv start.sh /usr/local/bin
+#RUN mv start_django.sh /usr/local/bin
 
 # Create folder for static files
-RUN mkdir $HOME/nexus_django/static
+#RUN mkdir $HOME/nexus_django/static
 
 # Collect static files
-WORKDIR $HOME/nexus_django
+#WORKDIR $HOME/nexus_django
 #RUN python manage.py collectstatic --no-input --clear
 # RUN ./manage.py collectstatic --no-input --clear
 # RUN ./manage.py flush --no-input
 
 # Back to root
-USER root
-WORKDIR $HOME
+#USER root
+#WORKDIR $HOME
 
 # Configure Nginx
-RUN rm /etc/nginx/sites-enabled/default
-RUN ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
+#RUN rm /etc/nginx/sites-enabled/default
+#RUN ln -s /home/bsb/nexus.nginx.conf /etc/nginx/sites-enabled/nexus.nginx.conf
 
 # Expose port for Reticulum server TCP Interface (disable as default)
 ENV NEXUS_CONTAINER_RNS_PORT 4242
@@ -119,5 +119,5 @@ EXPOSE $NEXUS_CONTAINER_WEB_PORT
 ENV NEXUS_CONTAINER_API_PORT 4281
 EXPOSE $NEXUS_CONTAINER_API_PORT
 
-ENTRYPOINT ["entrypoint.sh"]
+#ENTRYPOINT ["entrypoint.sh"]
 # CMD ["/home/bsb/start.sh"]
