--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -72,6 +72,7 @@ RUN pip install --upgrade pip
 RUN pip install cryptography rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
 
 # Copy ressources from context into bsb home
+ARG CACHEBUST=1
 COPY . .
 # Set ownership to usr bsb
 USER root
@@ -83,10 +84,10 @@ WORKDIR $HOME
 RUN pip install -r ./requirements.txt
 
 # Make some scripts executable
-#RUN chmod +x entrypoint.sh
-#RUN chmod +x start.sh
-#RUN chmod +x start_django.sh
-# RUN chmod +x $HOME/nexus_django/manage.py
+RUN chmod +x entrypoint.sh
+RUN chmod +x start.sh
+RUN chmod +x start_django.sh
+RUN chmod +x $HOME/nexus_django/manage.py
 
 # Move script to bin
 #RUN mv entrypoint.sh /usr/local/bin
