--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -75,19 +75,19 @@ RUN pip install cryptography rns lxmf nomadnet rnodeconf requests pytz Django gu
 ARG CACHEBUST=1
 COPY . .
 # Set ownership to usr bsb
-USER root
-RUN chown -R bsb:bsb $HOME
-USER bsb
-WORKDIR $HOME
+#USER root
+#RUN chown -R bsb:bsb $HOME
+#USER bsb
+#WORKDIR $HOME
 
 # Install required python packages
-RUN pip install -r ./requirements.txt
+#RUN pip install -r ./requirements.txt
 
 # Make some scripts executable
-RUN chmod +x entrypoint.sh
-RUN chmod +x start.sh
-RUN chmod +x start_django.sh
-RUN chmod +x $HOME/nexus_django/manage.py
+#RUN chmod +x entrypoint.sh
+#RUN chmod +x start.sh
+#RUN chmod +x start_django.sh
+#RUN chmod +x $HOME/nexus_django/manage.py
 
 # Move script to bin
 #RUN mv entrypoint.sh /usr/local/bin
