--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -69,33 +69,35 @@ WORKDIR $HOME
 
 # Upgrade pip
 RUN pip install --upgrade pip
+# Install requiered python packages
 RUN pip install cryptography rns lxmf nomadnet rnodeconf requests pytz Django gunicorn psycopg2-binary gevent
 
+# Change to root
+USER root
 # Copy ressources from context into bsb home
 ARG CACHEBUST=1
 COPY . .
 # Set ownership to usr bsb
-USER root
 RUN chown -R bsb:bsb $HOME
+# Make some scripts executable
+RUN chmod +x entrypoint.sh
+RUN chmod +x start.sh
+RUN chmod +x start_django.sh
+# Move script to bin
+RUN mv entrypoint.sh /usr/local/bin
+RUN mv start.sh /usr/local/bin
+RUN mv start_django.sh /usr/local/bin
+
+# Change to bsb again to install python packages indicated at the rerquirents.txt
+# This will be done without cache usage
 USER bsb
 WORKDIR $HOME
 
 # Install required python packages
 RUN pip install -r ./requirements.txt
 
-# Make some scripts executable
-RUN chmod +x entrypoint.sh
-RUN chmod +x start.sh
-RUN chmod +x start_django.sh
-
-# Move script to bin
-RUN mv entrypoint.sh /usr/local/bin
-RUN mv start.sh /usr/local/bin
-RUN mv start_django.sh /usr/local/bin
-
 # Move to Django
 WORKDIR $HOME/nexus_django
-
 # Make manage.py executable
 RUN chmod +x manage.py
 # Create folder for static files
@@ -106,7 +108,7 @@ RUN mkdir static
 RUN ./manage.py collectstatic --no-input --clear
 RUN ./manage.py flush --no-input
 
-# Back to root
+# Back to root to finalize stuff
 USER root
 WORKDIR $HOME
 
