--- a/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
+++ b/bsbdock.nexus_context/Dockerfile_nexus_dev_linux-amd64
@@ -128,5 +128,4 @@ EXPOSE $NEXUS_CONTAINER_WEB_PORT
 ENV NEXUS_CONTAINER_API_PORT 4281
 EXPOSE $NEXUS_CONTAINER_API_PORT
 
-#ENTRYPOINT ["entrypoint.sh"]
-# CMD ["/home/bsb/start.sh"]
+ENTRYPOINT ["entrypoint.sh"]
