--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@
 #NEXUS_PORT_JSONAPI=127.0.0.1:4281
 #NEXUS_PORT_JSONAPI=4281
 #NEXUS_RNODE_DEVICE=/dev/tty0
-#NEXUS_COMMAND=/home/bsb/start.sh
+#NEXUS_COMMAND=start.sh
 
 # Default nexus server configuration
 # If your local environment differs uncomment and change the required setting
@@ -78,4 +78,4 @@ NEXUS_LONGPOLL=60
 NEXUS_TIMEOUT=70
 NEXUS_ROLE={"cluster":"cockpit"}
 NEXUS_BRIDGE=[{"url":"https://nexus.deltamatrix.org:8244","cluster":"dev"}]
-NEXUS_COMMAND=/home/bsb/start_django.sh
+NEXUS_COMMAND=start_django.sh
